# Harima

./: .gitignore  README.md  harima.cabal  hs-arima.cabal
example/harima-example/: harima-example.cabal
example/harima-example/app/: Main.hs
src/: ARIMA.hs
src/Data/: TimeSeries.hs
src/Statistics/TimeSeries/: ARIMA.hs
test/: ARIMATest.hs
