name:                hs-arima
version:             0.1.0.0
synopsis:            Time series analysis and forecasting using ARIMA models
description:         A Haskell library for time series analysis and forecasting with ARIMA models.
license:             MIT
license-file:        LICENSE
author:              Anderson Pozzi
maintainer:          eanderea1@gmail.com
category:            Data, Machine Learning
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     ARIMA, Data.TimeSeries, Statistics.TimeSeries.ARIMA
  build-depends:       base >=4.7 && <5, vector, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hs-arima-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ARIMATest.hs
  build-depends:       base >=4.7 && <5, hs-arima, HUnit, vector
  default-language:    Haskell2010