cabal-version:       >= 2.0
name:                harima-example
version:             0.1.0.0
build-type:          Simple

executable harima-example
  main-is:             app/Main.hs
  build-depends:       base >= 4.14 && < 5,
					   gnuplot >= 0.5.5,
                       harima >= 0.1.0.0,
                       time,
                       vector
  default-language:    Haskell2010